--- a/2022WEB/netmarble.html
+++ b/2022WEB/netmarble.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>넷마블문화재단</title>
+    <title>넷마블문화d재단</title>
 <style>
     /* reset */
     *{margin: 0;padding: 0;box-sizing: border-box;}
