--- a/03netmarble/index.html
+++ b/03netmarble/index.html
@@ -25,6 +25,16 @@
             </ul>
         </nav>
         </div>
+
+        <div class="visual">
+            <ul class="slide1">
+                <li style="background-image:url(../images/netmable01.jpg)" class="slideItem">
+                    <div class="txtWrap">
+                        <div class="txt">
+                            <h3>어깨동무문고</h3>
+                            <p>다름을 이해하는 모두의 동화</p>
+                        </div>
+                    </div>
         
 
     </header>
