--- a/03netmarble/index.html
+++ b/03netmarble/index.html
@@ -35,7 +35,18 @@
                             <p>다름을 이해하는 모두의 동화</p>
                         </div>
                     </div>
+
+        <!-- <div class="cont">
+             -->
+
+
+
+        <!-- <div class="title01">
+            <h3>문화를 만들고 인재를 키우고
+            <br>마음을 나눕니다<br></h3> -->
+        <!-- </div> -->
         
+
 
     </header>
 
