--- a/03netmarble/index.html
+++ b/03netmarble/index.html
@@ -76,7 +76,14 @@
             </li>
         </ul>
 
+        <div class="line">
+            <h2>문화를 만들고 인재를 키우고
+                <br>마음을 나눕니다
+            </h2>
+        </div>
     </div>
+
+    
 
     <div style="height:1000px;background-color:rgb(255, 255, 255);"></div>
 
