--- a/03netmarble/index.html
+++ b/03netmarble/index.html
@@ -81,6 +81,12 @@
                 <br>마음을 나눕니다
             </h2>
         </div>
+
+        <div class="tex01">
+            <p>넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을 높여 가고자
+                <br>다양한 공익 활동을 전개해 나가고 있습니다.
+            </p>
+        </div>
     </div>
 
     
