--- a/04college/index.html
+++ b/04college/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="headerBottom container">
             <div class="LOGO">
-                <img src="images/logo.png" alt="">
+                <a href="#"><img src="images/logo.png" alt=""></a> 
             </div>
             <nav class="menuWrap">
                 <ul class="clearfix">
@@ -42,8 +42,12 @@
                     <li><a href="#">학사안내</a></li>
                     <li><a href="#">대학생활</a></li>
                     <li><a href="#">학생지원센터</a></li>
-                    <li><img src="images/ikon01.jpg" alt=""></li>
-                    <li><img src="images/ikon02.png" alt=""></li>
+                    <nav class="ikon">
+                        <ul>
+                        <li><a href="#"><img src="images/ikon01.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="images/ikon02.png" alt=""></a></li>
+                        </ul>
+                    </nav>
                 </ul>
             </nav>
         </div>
@@ -54,6 +58,33 @@
         <div class="sec1st container">
             <h3>함께 나누며 세상을 이끌어</h3>
             <h1>세계로향하는 서경대학교</h1>
+            <nav class="menu01">
+                <ul>
+                    <li><a href="#"><img src="images/Group 1.png" alt=""></a>
+                    <a href="#">입학절차안내</a></li>
+                </ul>
+            </nav>    
+
+            <nav class="menu02">
+                <ul>
+                    <li><a href="#"><img src="images/Group 2.png" alt=""></a>
+                    <a href="#">입학설명회</a></li>
+                </ul>
+            </nav>    
+
+            <nav class="menu03">
+                <ul>
+                    <li><a href="#"><img src="images/Group 3.png" alt=""></a>
+                    <a href="#">장학제도</a></li>
+                </ul>
+            </nav>    
+
+            <nav class="menu04">
+                <ul>
+                    <li><a href="#"><img src="images/Group 4.png" alt=""></a>
+                    <a href="#">증명서발급</a></li>
+                </ul>
+            </nav>           
         </div>
 
 
