--- a/04college/index.html
+++ b/04college/index.html
@@ -7,9 +7,14 @@
     <title>서경대학교</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="../css/jquery.bxslider.css">
+    <link rel="stylesheet" href="../css/colorbox.css">
     <link rel="stylesheet" href="css/style.css">
+
     <script src="../js/jquery-3.1.1.min.js"></script>
     <script src="../js/jquery.bxslider.js"></script>
+    <script src="../js/jquery.colorbox-min.js"></script>
+    <script src="js/script.js"></script>
+
 
 
 
@@ -203,11 +208,12 @@
 
                 <li>
                     <ul><div class="playButton">
-                        <a href="#"><img src="images/button.png" alt=""></a>
+                        <li><a href="https://www.youtube.com/embed/4ztDo0D2bjM" class="youtube" title="서경대학교 홍보영상"><img src="../images/button.png" alt=""></a></li>
                     </div>
                 </ul>
-                   
                 </li>
+
+                
 
 
 
