--- a/04college/index.html
+++ b/04college/index.html
@@ -133,7 +133,7 @@
                                         <a href="#">자세히 보기 ></a>
                                 </div>
                             </div>
-                            <img src="images/slide02.jpg" alt="">
+                            <img src="images/slide02.png" alt="">
                         </li>
                     </ul>
                     <div class="next">
