--- a/06ybtour/index.html
+++ b/06ybtour/index.html
@@ -48,7 +48,7 @@
 
 <nav>
     <div class="mainMenu">
-        <ul>
+        <ul class="claerfix">
             <li><a href="#">여행도시</a></li>
             <li><a href="#">호텔예약</a></li>
             <li><a href="#">렌트카</a></li>
@@ -56,9 +56,11 @@
             <li><a href="#">회사소개</a></li>
             <li><a href="#">커뮤니티</a></li>
         </ul>
-        <div class="line"></div>
     </div>
 </nav>
+<div class="line"></div>
+
+
     
 
 
