--- a/06ybtour/index.html
+++ b/06ybtour/index.html
@@ -72,7 +72,7 @@
         <div class="header">
             <ul class="clearfix">
                 <li>
-                    <a href="#"><img src="images/logo.jpg" alt=""></a>
+                    <a href="index.html"><img src="images/logo.jpg" alt=""></a>
                 </li>
                 <li>
                     <form action="#">
@@ -100,8 +100,8 @@
 
 <nav>
     <div class="mainMenu">
-        <ul class="claerfix">
-            <li><a href="./sub01.html"><h4>여행도시</h4></a></li>
+        <ul class="d-flex j-between">
+            <li><a href="citytour.html" class="d-flex j-center a-center" ><h4>여행도시</h4></a></li>
             <li><a href="#"><h4>호텔예약</h4></a></li>
             <li><a href="#"><h4>렌트카</h4></a></li>
             <li><a href="#"><h4>여행TIP</h4></a></li>
@@ -309,6 +309,9 @@
                 <h3>지금,여행이 떠나고 싶다면? <br>
                 노랑풍선과 여행을 떠나자!</h3>
             </div>
+
+
+            <img src="images/content2.png" alt="" class="balloon01">
         </div>
         
         <div class="content">
@@ -490,7 +493,7 @@
 
 
 
-<img src="images/content2.png" alt="" class="balloon01">
+
 
 
 
