--- a/06ybtour/index.html
+++ b/06ybtour/index.html
@@ -101,12 +101,12 @@
 <nav>
     <div class="mainMenu">
         <ul class="d-flex j-between">
-            <li><a href="citytour.html" class="d-flex j-center a-center" ><h4>여행도시</h4></a></li>
-            <li><a href="#"><h4>호텔예약</h4></a></li>
-            <li><a href="#"><h4>렌트카</h4></a></li>
-            <li><a href="#"><h4>여행TIP</h4></a></li>
-            <li><a href="#"><h4>회사소개</h4></a></li>
-            <li><a href="#"><h4>커뮤니티</h4></a></li>
+            <li><a href="sb01_citytour.html"><h4>여행도시</h4></a></li>
+            <li><a href="sb02_hotel.html"><h4>호텔예약</h4></a></li>
+            <li><a href="sb03_rental.html"><h4>렌트카</h4></a></li>
+            <li><a href="sb04_travel.html"><h4>여행TIP</h4></a></li>
+            <li><a href="sb05_company.html"><h4>회사소개</h4></a></li>
+            <li><a href="sb06_community.html"><h4>커뮤니티</h4></a></li>
         </ul>
     </div>
 </nav>
