--- a/06ybtour/sb01_citytour.html
+++ b/06ybtour/sb01_citytour.html
@@ -45,13 +45,13 @@
     
     <nav>
         <div class="mainMenu">
-            <ul class="d-flex j-between">
-                <li><a href="citytour.html" class="d-flex j-center a-center active" ><h4>여행도시</h4></a></li>
-                <li><a href="#"><h4>호텔예약</h4></a></li>
-                <li><a href="#"><h4>렌트카</h4></a></li>
-                <li><a href="#"><h4>여행TIP</h4></a></li>
-                <li><a href="#"><h4>회사소개</h4></a></li>
-                <li><a href="#"><h4>커뮤니티</h4></a></li>
+            <ul class="clearfix">
+            <li class="active"><a href="#"><h4>여행도시</h4></a></li>
+            <li><a href="./sb02_hotel.html"><h4>호텔예약</h4></a></li>
+            <li><a href="./sb03_rental.html"><h4>렌트카</h4></a></li>
+            <li><a href="./sb04_travel.html"><h4>여행TIP</h4></a></li>
+            <li><a href="./sb05_company.html"><h4>회사소개</h4></a></li>
+            <li><a href="./sb06_community.html"><h4>커뮤니티</h4></a></li>
             </ul>
         </div>
     </nav>
@@ -63,12 +63,9 @@
  <div class="contents subpage company">
     <div class="visual py-8">
         <div class="txtWrap container">
-            <h3>company</h3>
-            <P>Lorem ipsum dolor sit amet.</P>
+            <a href="#"><img src="images/sb01.jpg" alt=""></a>
         </div>
     </div>
-    <div class="container section py-5">
-        company
     </div>
 </div>
 
