--- a/06ybtour/index.html
+++ b/06ybtour/index.html
@@ -72,7 +72,7 @@
         <div class="header">
             <ul class="clearfix">
                 <li>
-                    <a href="index.html"><img src="images/logo.jpg" alt=""></a>
+                    <a href="./index.html"><img src="images/logo.jpg" alt=""></a>
                 </li>
                 <li>
                     <form action="#">
@@ -100,7 +100,7 @@
 
 <nav>
     <div class="mainMenu">
-        <ul class="d-flex j-between">
+        <ul class="clearfix">
             <li><a href="sb01_citytour.html"><h4>여행도시</h4></a></li>
             <li><a href="sb02_hotel.html"><h4>호텔예약</h4></a></li>
             <li><a href="sb03_rental.html"><h4>렌트카</h4></a></li>
