--- a/06ybtour/sb01_citytour.html
+++ b/06ybtour/sb01_citytour.html
@@ -46,7 +46,7 @@
     <nav>
         <div class="mainMenu">
             <ul class="clearfix">
-            <li class="active"><a href="#"><h4>여행도시</h4></a></li>
+            <li><a  href="#"class="active"><h4>여행도시</h4></a></li>
             <li><a href="./sb02_hotel.html"><h4>호텔예약</h4></a></li>
             <li><a href="./sb03_rental.html"><h4>렌트카</h4></a></li>
             <li><a href="./sb04_travel.html"><h4>여행TIP</h4></a></li>
@@ -60,14 +60,11 @@
 
 
  <!-- section  -->
- <div class="contents subpage company">
-    <div class="visual py-8">
-        <div class="txtWrap container">
+        <div class="container">
             <a href="#"><img src="images/sb01.jpg" alt=""></a>
         </div>
-    </div>
-    </div>
-</div>
+   
+
 
 
 
