--- a/07cu/index.html
+++ b/07cu/index.html
@@ -85,9 +85,8 @@
         </div>
         <div class="overlay"></div>
         <div class="navbarClone">
-            menu
             <div class="mMenu">
-
+                
             </div>
             
         </div>
@@ -107,7 +106,7 @@
                 </div>
             </li>
             <li>
-                <a href="https://www.youtube.com/shorts/Lq2h4nkoGjE" class="youtube"><img src="images/sec1_play.png" alt=""></a>
+                <a href="https://www.youtube.com/embed/q2AcjbgqAFc" class="youtube"><img src="images/sec1_play.png" alt=""></a>
             </li>
             <li>3</li>
             <li>
