--- a/07cu/index.html
+++ b/07cu/index.html
@@ -16,7 +16,8 @@
 <body>
     <header id="header">
         <div class="navbarWrap container">
-           <a href="#"><img src="images/header_logo.png" alt=""></a>
+           <a class="logo" href="#"><img src="images/header_logo.png" alt=""></a>
+           <a class="colorlogo" href="#"><img src="images/header_colorlogo.png" alt=""></a>
             <nav class="navbar">
                 <ul>
                     <li><a href="#">CU소개</a>
@@ -86,12 +87,12 @@
         <div class="overlay"></div>
         <div class="navbarClone">
             <div class="mMenu">
-                
+                <i class="fa-solid fa-xmark"></i>
             </div>
             
         </div>
     </header>
-
+  
 
     <div class="visualWrap">
         slide
