--- a/06ybtour/index.html
+++ b/06ybtour/index.html
@@ -347,7 +347,7 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide swiper1st">
-                        <img src="images/03ttt03.jpg" alt="" class="slider01">
+                        <img src="images/03ttt03.jpg" alt="" class="slide01">
                             <div class="sliderbox">
                                 <ul class="clearfix">
                                     <li><h3>HILLTON HOTEL</h3></li>
