--- a/07cu/index.html
+++ b/07cu/index.html
@@ -202,7 +202,7 @@
                         <div class="itemWrap">
                             <div class="sTxt">
                                 <div class="txt">
-                                    <h3>cu플러스티머니<br>
+                                    <h3>DGB유페이 원패스<br>
                                         결제 시 20% 할인</h3>
                                     <h4>아이스크림 전 상품<br>
                                         최대 3천원</h4>
@@ -215,10 +215,10 @@
                         <div class="itemWrap">
                             <div class="sTxt">
                                 <div class="txt">
-                                    <h3>cu플러스티머니<br>
-                                        결제 시 20% 할인</h3>
-                                    <h4>아이스크림 전 상품<br>
-                                        최대 3천원</h4>
+                                    <h3>포켓CU<br>
+                                        신규가입 이벤트</h3>
+                                    <h4>신규가입 고객님께<br>
+                                        특별한 쿠폰을 드립니다</h4>
                                 </div>
                             </div>
                             <div class="sImg"><img src="images/sec1_slide03.jpg" alt=""></div>
@@ -228,10 +228,10 @@
                         <div class="itemWrap">
                             <div class="sTxt">
                                 <div class="txt">
-                                    <h3>cu플러스티머니<br>
-                                        결제 시 20% 할인</h3>
-                                    <h4>아이스크림 전 상품<br>
-                                        최대 3천원</h4>
+                                    <h3>출석룰렛 이벤트<br>
+                                        100% 당첨</h3>
+                                    <h4>ALL 출석 시 5천원 할인권과<br>
+                                        워터파크 이용권까지!</h4>
                                 </div>
                             </div>
                             <div class="sImg"><img src="images/sec1_slide04.jpg" alt=""></div>
@@ -241,10 +241,10 @@
                         <div class="itemWrap">
                             <div class="sTxt">
                                 <div class="txt">
-                                    <h3>cu플러스티머니<br>
-                                        결제 시 20% 할인</h3>
-                                    <h4>아이스크림 전 상품<br>
-                                        최대 3천원</h4>
+                                    <h3>매주 수요일은<br>
+                                        CU 특템데이</h3>
+                                    <h4>최대 5천원 할인쿠폰<br>
+                                        오전 11시 선착순 증정!</h4>
                                 </div>
                             </div>
                             <div class="sImg"><img src="images/sec1_slide05.jpg" alt=""></div>
@@ -313,6 +313,7 @@
                     <h2>상품문의, 창업상담 무엇을<br>도와드릴까요?</h2>
                   </div>
             </li>
+            <li> <img src="images/Group 5.jpg" alt=""></li>
         </ul>
     </section>
 
