--- a/07cu/index.html
+++ b/07cu/index.html
@@ -320,10 +320,12 @@
 
 
     <section class="contents container story">
-        <div class="storyWrpa">
-            <img class="bg" src="images/sec2_contents.jpg" alt="">
-            <h2>스토리</h2>
-        <div class="icon">
+        <div class="storyWrap">
+            <img src="images/2.png" alt="">
+            <!-- <h2>스토리</h2>
+            <div class="story">
+                
+        <div class="iconWrap">
             <ul class="clerfix" >
                 <li><img src="images/sec2_icon01.png" alt="">
                     <div class="text">
@@ -364,6 +366,8 @@
 
             </ul>
         </div>
+            </div>
+             -->
         </div>
     </section>
 
