--- a/07cu/index.html
+++ b/07cu/index.html
@@ -712,56 +712,61 @@
 
 <footer>
     <div class="footerWrap">
-        <div class="footerLogo">
-            <a href="#"><img src="images/footer_logo.png" alt=""></a>
-            <div class="text">
-                <h4>BGF리테일 서울시 강남구 테헤란로 405(삼성동)<br>
-                    COPYRIGHT © BGFretail ALL RIGHT RESERVED.</h4>
-                <p>TEL: 1577-8007</p>
+        <div class="footer">
+            <div class="footerLogo">
+                <a href="#"><img src="images/footer_logo.png" alt=""></a>
+                <div class="text">
+                    <h4>BGF리테일 서울시 강남구 테헤란로 405(삼성동)<br>
+                        COPYRIGHT © BGFretail ALL RIGHT RESERVED.</h4>
+                    <p>TEL: 1577-8007</p>
+                </div>
+                <div class="sns">
+                    <ul>
+                        <li><a href="#"><img src="images/footer_icon01.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/footer_icon02.png" alt=""></a></li>
+                        <li><a href="#"><img src="images/footer_icon03.png" alt=""></a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="sns">
-                <ul>
-                    <li><a href="#"><img src="images/footer_icon01.png" alt=""></a></li>
-                    <li><a href="#"><img src="images/footer_icon02.png" alt=""></a></li>
-                    <li><a href="#"><img src="images/footer_icon03.png" alt=""></a></li>
-                </ul>
+    
+            <div class="footerR">
+                <div class="text01">
+                    <h5>Quick Menu</h5>
+                    <ul>
+                        <li><p>거래상담</p></li>
+                        <li><p>매장찾기</p></li>
+                        <li><p>발주 및 배송데이터</p></li>
+                        <li><p>전자세금계산서</p></li>
+                    </ul>
+                </div>
+                <div class="text02">
+                    <h5>&nbsp;</h5>
+                    <ul>
+                        <li><p>점주인증</p></li>
+                        <li><p>임직원인증</p></li>
+                        <li><h6>개인정보처리방침</h6></li>
+                    </ul>
+                </div>
+                <div class="text03">
+                    <h5>Family Site</h5>
+                    <ul>
+                        <li><p>BGF</p></li>
+                        <li><p>BGF리테일</p></li>
+                        <li><p>포켓CU</p></li>
+                        <li><p>BGF네트웍스</p></li>
+                    </ul>
+                </div>
+                <div class="text04">
+                    <h5>&nbsp;</h5>
+                    <ul>
+                        <li><p>BGF휴먼넷</p></li>
+                        <li><p>BGF로지스</p></li>
+                        <li><p>BGF포스트</p></li>
+                    </ul>
+                </div>
             </div>
         </div>
-
-        <div class="footerR">
-            <div class="text01">
-                <h5>Quick Menu</h5>
-                <ul>
-                    <li><p>거래상담</p></li>
-                    <li><p>매장찾기</p></li>
-                    <li><p>발주 및 배송데이터</p></li>
-                    <li><p>전자세금계산서</p></li>
-                </ul>
-            </div>
-            <div class="text02">
-                <ul>
-                    <li><p>점주인증</p></li>
-                    <li><p>임직원인증</p></li>
-                    <li><h6>개인정보처리방침</h6></li>
-                </ul>
-            </div>
-            <div class="text03">
-                <h5>Family Site</h5>
-                <ul>
-                    <li><p>BGF</p></li>
-                    <li><p>BGF리테일</p></li>
-                    <li><p>포켓CU</p></li>
-                    <li><p>BGF네트웍스</p></li>
-                </ul>
-            </div>
-            <div class="text04">
-                <ul>
-                    <li><p>BGF휴먼넷</p></li>
-                    <li><p>BGF로지스</p></li>
-                    <li><p>BGF포스트</p></li>
-                </ul>
-            </div>
-        </div>
+        
     </div>
 </footer>
 
