--- a/09bootstrap/jobda.html
+++ b/09bootstrap/jobda.html
@@ -74,7 +74,7 @@
                                 <img src="images/jobda4.png" alt="" class="w-25">
                                 <div class="p-3">
                                     <h5>title</h5>
-                                    <p>Lorem, ipsum dolor.</p>
+                                    <p>Lorem, ipsum doslor.</p>
                                 </div>
                             </a>
                         </div>
